<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingHorizontal="20dp"
    tools:context=".RelatifActivity">

    <TextView
        android:id="@+id/tvJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Form_Pendaftaran"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etNama"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@id/tvJudul"
        android:layout_marginTop="10dp"
        android:hint="@string/Masukan_Nama_Lengkap"
        android:inputType="textPersonName"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etNomor"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/etNama"
        android:layout_marginTop="8dp"
        android:hint="@string/Masukan_Nomor_Telepon"
        android:inputType="phone"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etAlamat"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/etNomor"
        android:layout_marginTop="8dp"
        android:hint="@string/Masukan_Alamat"
        android:inputType="textPostalAddress"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvAgama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAlamat"
        android:layout_marginTop="10dp"
        android:text="@string/Agama"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spAgama"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tvAgama"
        android:layout_marginTop="8dp"
        android:entries="@array/agama" />

    <TextView
        android:id="@+id/tvKelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spAgama"
        android:layout_marginTop="10dp"
        android:text="@string/Jenis_Kelamin"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgKelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvKelamin"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbLaki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Laki_Laki" />

        <RadioButton
            android:id="@+id/rbPerempuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Perempuan"
            android:layout_marginStart="20dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvHobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgKelamin"
        android:layout_marginTop="10dp"
        android:text="@string/Hobi"
        android:textSize="16sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cbMembaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHobi"
        android:text="@string/Membaca" />

    <CheckBox
        android:id="@+id/cbMakan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbMembaca"
        android:text="@string/Makan" />

    <CheckBox
        android:id="@+id/cbTidur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbMakan"
        android:text="@string/Tidur" />

    <CheckBox
        android:id="@+id/cbOlahraga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbTidur"
        android:text="@string/Olahraga" />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Simpan"
        android:backgroundTint="#4E8920"
        android:layout_below="@+id/cbOlahraga"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>