<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".indah">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Warung_makan"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Nama_Pelanggan"
            android:layout_marginTop="20dp"/>

        <!-- Makanan 1 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/nasibakar"
                    android:scaleType="centerCrop"
                    android:background="#FFFFFF" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Nasi_Bakar"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rp 25.000"
                        android:textSize="16sp"
                        android:textColor="#FF5722" />

                    <EditText
                        android:id="@+id/jumlah1"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:hint="@string/Jumlah"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Makanan 2 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ayamkremes"
                    android:scaleType="centerCrop"
                    android:background="#FFFFFF" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Ayam_Kremes"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rp 20.000"
                        android:textSize="16sp"
                        android:textColor="#FF5722" />

                    <EditText
                        android:id="@+id/jumlah2"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:hint="@string/Jumlah"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Makanan 3 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sate"
                    android:scaleType="centerCrop"
                    android:background="#FFFFFF" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Sate_Ayam"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rp 22.000"
                        android:textSize="16sp"
                        android:textColor="#FF5722" />

                    <EditText
                        android:id="@+id/jumlah3"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:hint="@string/Jumlah"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Makanan 4 -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/miegoreng"
                    android:scaleType="centerCrop"
                    android:background="#FFFFFF" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Mie_Goreng"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rp 15.000"
                        android:textSize="16sp"
                        android:textColor="#FF5722" />

                    <EditText
                        android:id="@+id/jumlah4"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:hint="@string/Jumlah"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnPesan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/Memesan"/>

    </LinearLayout>

</ScrollView>
