<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".KonversiSuhu">

    <TextView
        android:id="@+id/etJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Konversi_Suhu"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etJudul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/spSuhu"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:entries="@array/suhu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Masukan_Angka"
                app:layout_constraintTop_toBottomOf="@+id/spSuhu"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/CardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/spSuhu1"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:entries="@array/suhu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/Output"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Masukan_Angka"
                app:layout_constraintTop_toBottomOf="@+id/spSuhu1"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnkonverter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Konversi"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/CardViewOutput"/>

</androidx.constraintlayout.widget.ConstraintLayout>